# Time-Series-Explanation-with-LLM

./: Makefile  README.md  pyproject.toml  requirements.txt
notebooks/: 1.0_eda.ipynb  3.0_LLM_cluster.ipynb  3.1_LLM_cluster.ipynb  3.2_LLM_csv.ipynb  3.3_LLM_tools_agents_chain.ipynb  4.0_performance_mixte.ipynb  4.1_performance_quantitative.ipynb
scripts/: chain.py  download_meteo_data.py
